[gd_scene load_steps=13 format=3 uid="uid://dkoceoe304q60"]

[ext_resource type="Script" path="res://main.gd" id="1_hsgtt"]
[ext_resource type="Texture2D" uid="uid://bmre1ptnldhqf" path="res://assets/space_background.png" id="1_yaehv"]
[ext_resource type="PackedScene" uid="uid://d2ugs58bu7o0v" path="res://rock.tscn" id="2_amut6"]
[ext_resource type="PackedScene" uid="uid://cc2ka87lsnd6e" path="res://player.tscn" id="2_kdfhi"]
[ext_resource type="PackedScene" uid="uid://y303bn53xwfs" path="res://bad_rock.tscn" id="3_7shdd"]
[ext_resource type="PackedScene" uid="uid://b4jn5eh445wls" path="res://enemy.tscn" id="3_8rkmy"]
[ext_resource type="PackedScene" uid="uid://j1qrqp63c3e6" path="res://Juggernaut.tscn" id="4_vx22n"]
[ext_resource type="PackedScene" uid="uid://cm0qfc4hvgfhm" path="res://hud.tscn" id="5_lgb31"]
[ext_resource type="AudioStream" uid="uid://x5nsvrpvme8i" path="res://assets/sounds/explosion.wav" id="7_pmhfb"]
[ext_resource type="AudioStream" uid="uid://dq8pydh0tylmm" path="res://assets/sounds/levelup.ogg" id="8_ll7d4"]
[ext_resource type="AudioStream" uid="uid://cr0p03eqax7ib" path="res://assets/sounds/Funky-Gameplay_Looping.ogg" id="9_aea07"]

[sub_resource type="Curve2D" id="Curve2D_3p23v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 8, 0, 0, 0, 0, 1912, 8, 0, 0, 0, 0, 1912, 1072, 0, 0, 0, 0, 16, 1064, 0, 0, 0, 0, 8, 8)
}
point_count = 5

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_hsgtt")
rock_scene = ExtResource("2_amut6")
bad_rock_scene = ExtResource("3_7shdd")
enemy_scene = ExtResource("3_8rkmy")
boss_scene = ExtResource("4_vx22n")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_yaehv")
centered = false

[node name="player" parent="." instance=ExtResource("2_kdfhi")]

[node name="HUD" parent="." instance=ExtResource("5_lgb31")]

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3p23v")

[node name="RockSpawn" type="PathFollow2D" parent="RockPath"]
position = Vector2(8, 8)

[node name="EnemyTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_pmhfb")

[node name="LevelUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ll7d4")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_aea07")

[connection signal="dead" from="player" to="." method="_on_player_dead"]
[connection signal="lives_changed" from="player" to="HUD" method="update_lives"]
[connection signal="shield_changed" from="player" to="HUD" method="_on_player_shield_changed"]
[connection signal="shield_changed" from="player" to="HUD" method="update_shield"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
